# jg-headers

./: CMakeLists.txt  Configure.cmake  LICENSE  source_version.in.cpp
include/: source_version.h  version.h
